# multiarchive

./: README.md  pyproject.toml
src/multiarchive/: __init__.py  _archive.py
tests/: test_archive.py  test_archive_member_info.py
