[project]
name = "multiarchive"
version = "0.1.0"
description = "A high level archive handler for Python."
readme = "README.md"
authors = [
    { name = "NSPC911", email = "87571998+NSPC911@users.noreply.github.com" }
]
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["uv_build>=0.11.8,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "backports-zstd>=1.3.0 ; python_full_version < '3.14'",
    "poethepoet>=0.45.0",
    "pytest>=9.0.3",
    "pytest-xdist>=3.8.0",
    "rarfile>=4.2",
    "ruff>=0.15.12",
    "ty==0.0.32",
]

[tool.poe.tasks]
check.help = "Run all checks (type checking and linting)"
check.sequence = [ { cmd = "ty check" },{ cmd = "ruff check" } ]

fmt.help = ""
fmt.ref = "format"
format.help = "Run ruff related formatters"
format.sequence = [ { cmd = "ruff check --unsafe-fixes --fix"}, { cmd = "ruff format"} ]

[tool.poe.tasks.test]
help = "Run tests"
cmd = "pytest -n ${workers} ${FILES}"
args = [
  { name = "FILES", help = "Specific test files or directories to run (optional)", type = "string", positional = true, required = false, multiple = true },
  { name = "workers", help = "Number of parallel workers for test execution (optional)", default = 4, type = "integer", options = ["-n"] },
]

[tool.ruff.lint]
select = [
  "ASYNC220", "ASYNC221", "ASYNC251",
  "ANN",
  "COM819",
  "C400",
  "DOC",
  "D404",
  "E",
  "F",
  "I",
  "N801", "N802", "N805",
  "PLE1142",
  "Q",
  "SIM",
  "TD",
  "W",
]
ignore = [
  "ANN002", "ANN003", "ANN401",
  "E501",
  "TD002", "TD003",
  "W505",
]
preview = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
preview = true

[tool.ty.src]
exclude = [
  "src/rovr/classes/archive.py"
] # i dont want to add type indicators

[tool.ty.rules]
# possibly-missing-import = "ignore"
unresolved-reference = "ignore" # handled by ruff
unresolved-attribute = "ignore"
no-matching-overload = "ignore" # not that accurate
possibly-missing-attribute = "ignore" # no it is not missing
invalid-assignment = "warn" # probably already but warn for future
unused-ignore-comment = "ignore"
